crates/syncable-state-derive/tests/ui/with_attr_rejected.stderr
error: #[sync(with = ...)] is not supported in v1
 --> tests/ui/with_attr_rejected.rs:6:5
  |
6 |     title: SyncableString,
  |     ^^^^^
