crates/syncable-state-derive/tests/ui/with_attr_rejected.rs
use syncable_state::SyncableString;

#[derive(syncable_state_derive::SyncableState)]
struct WithAttrState {
    #[sync(with = custom_codec)]
    title: SyncableString,
}

fn main() {}
